# rust_script

./: Cargo.toml  NOTICE  README.md  SUMMARY.md  build.sh
src/: logging.rs  main.rs  pty_session.rs  script_control.rs  utils.rs
tests/: manual_test.md  simple_test.sh  test_ctrl_c.sh  test_ctrl_c_final.md  ui_test  ui_test.rs
